Bugfix: close button on mobile nav

--- a/src/components/navigation/index.css
+++ b/src/components/navigation/index.css
@@ -47,6 +47,7 @@
     background-size: 50%;
     position: absolute;
     right: 0;
+    z-index: var(--depth-2);
   }
 }
 
