--- a/src/components/page/index.css
+++ b/src/components/page/index.css
@@ -3,6 +3,12 @@
 .Page {
   background: white;
   position: relative;
+
+  &.has-nav {
+    height: 100vh;
+    overflow: hidden;
+    width: 100%;
+  }
 }
 
 .Page-inner {
